--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,29 @@ input[type="radio"]:first-child {
 input[type="button"] {
   border: none;
   height: 40px;
-  width: 31%;
+  width: 100%;
   margin-top: -120px;
   background: rgb(37, 151, 189);
   cursor: pointer;
+  margin-top: 10px;
+}
+.list-btn{
+  width: 34% !important;
+  margin-top: -100px !important;
+}
+
+.select{
+  margin-bottom: 20px;
+}
+.select select {
+  display: block;
+  width: 340px;
+  border: 2px solid steelblue;
+  padding: 10px;;
+  font-size: inherit;
+  background: khaki;;
+}
+
+.select select:focus{
+  background: #fff;
 }
