--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,43 @@ input[type="radio"]:first-child {
 input[type="button"] {
   border: none;
   height: 40px;
-  width: 31%;
-  margin-top: -120px;
+  width: 100%;
   background: rgb(37, 151, 189);
   cursor: pointer;
+  margin-top: 10px;
+}
+.list-btn{
+  width: 34% !important;
+  margin-top: -100px !important;
+}
+
+.select{
+  margin-bottom: 20px;
+}
+.select select {
+  display: block;
+  width: 250px;
+  border: 2px solid steelblue;
+  padding: 10px;;
+  font-size: inherit;
+  background: khaki;;
+}
+
+.select select:focus{
+  background: #fff;
+}
+
+.addCity {
+  position: relative;
+  width: 80px !important;
+  top: -52px;
+  left: 130px;
+}
+
+.mainBtn {
+  margin-top: -5px !important;
+}
+
+.radio {
+  margin-top: -80px;
 }
